make first two project cards

--- a/css/style.css
+++ b/css/style.css
@@ -90,3 +90,22 @@ footer.page-footer {
   font-weight: 300;
   font-size: 2em;
 }
+
+.github-circle {
+  background-image: url("../static/octocat.png");
+  background-size: 100%;
+}
+
+.card-fab {
+    position: relative;
+    z-index: 1;
+}
+
+.card.small .card-image + .card-content,
+.card.medium .card-image + .card-content,
+.card.large .card-image + .card-content,
+.card.small .card-image + .card-fab + .card-content,
+.card.medium .card-image + .card-fab +.card-content,
+.card.large .card-image + .card-fab + .card-content {
+  max-height: 40%;
+}
