--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import ThemeIcon from "../components/ThemeIcon.astro";
+
 interface Props {
 	title: string;
 }
@@ -6,7 +8,29 @@ interface Props {
 const { title } = Astro.props;
 ---
 
-<!doctype html>
+<script is:inline>
+	const theme = (() => {
+		if (
+			typeof localStorage !== "undefined" &&
+			localStorage.getItem("theme")
+		) {
+			return localStorage.getItem("theme");
+		}
+		if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+			return "dark";
+		}
+		return "light";
+	})();
+
+	if (theme === "light") {
+		document.documentElement.classList.remove("dark");
+	} else {
+		document.documentElement.classList.add("dark");
+	}
+
+	window.localStorage.setItem("theme", theme);
+</script>
+
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -16,14 +40,12 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="bg-blue-950">
+		<ThemeIcon />
 		<slot />
 	</body>
 </html>
 <style is:global>
-	html {
-		background: #13151a;
-	}
 	@font-face {
 		font-family: "ubuntu";
 		src: url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
