--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,9 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Landing Page">
 	<main class="flex flex-col items-center">
-		<div class="flex flex-col items-center h-screen max-w-5xl bg-zinc-100">
+		<div
+			class="flex flex-col items-center h-screen max-w-5xl bg-zinc-100 dark:bg-slate-900"
+		>
 			<div class="h-1/5" x-label="vertical spacer"></div>
 			<div class="rounded-md bg-purple-200 p-4 flex flex-col">
 				<h1 class="text-center text-4xl font-serif">
