--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,22 +4,16 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Landing Page">
 	<main class="flex flex-col items-center">
-		<div
-			class="flex flex-col items-center h-screen max-w-5xl bg-zinc-100 dark:bg-slate-900"
-		>
-			<div class="h-1/5" x-label="vertical spacer"></div>
-			<div class="rounded-md bg-purple-200 p-4 flex flex-col">
-				<h1 class="text-center text-4xl font-serif">
-					JTannas Github.io
-				</h1>
-				<div class="bg-violet-900 text-center rounded-md">
-					<p class="text-white p-2">
-						Work in progress to become personal profile. Probably
-						also a link repository, design playground, etc...<br /> Taking
-						it as a project to learn astro for when I need to build something
-						that's more static content than webapp.
-					</p>
-				</div>
+		<div class="h-1/5" x-label="vertical spacer"></div>
+		<div class="rounded-md bg-purple-200 p-4 flex flex-col">
+			<h1 class="text-center text-4xl font-serif">JTannas Github.io</h1>
+			<div class="bg-violet-900 text-center rounded-md">
+				<p class="text-white p-2">
+					Work in progress to become personal profile. Probably also a
+					link repository, design playground, etc...<br /> Taking it as
+					a project to learn astro for when I need to build something that's
+					more static content than webapp.
+				</p>
 			</div>
 		</div>
 	</main>
